# SpaceDOS-Not-real-DOS-

./: .gitignore  CMakeLists.txt  Makefile  Nedo_SpaceDOS.cpp  OOBE.cpp  OOBE.h  OOBE.hpp  README.md  RSP.cpp  SpaceDOS.cpp  changelog.txt  commands.cpp  commands.h  commands.hpp  counters.cpp  counters.h  data.cpp  data.h  errors.cpp  icon.rc  json.h  main.cpp  other.cpp  other.h  time.cpp  time.h  version.rc  zmeika.cpp
.github/workflows/: c-cpp.yml  makefile.yml
Commands/: Main_Commands.h
Commands/Fun/: Deleting.cpp  Deleting.h  Hacking.cpp  Hacking.h  Say.cpp  Say.h
Commands/Info/: Help.cpp
Commands/Notepad/: Notepad.cpp  Notepad.h
Commands/Other/: Calculator.h  Other_Commands.cpp  Other_Commands.h  Settings.cpp  Settings.h
Games/: Main_Games.h
Games/Simple_Games/: RSP.cpp  RSP.h
Games/TextAdventure/: Main_TextAdventure.cpp  Main_TextAdventure.h  Readme
Other/: Calculator.cpp  Notepad.cpp
headers/: OS_info.h
headers/OS/: OS_info.h
headers/games/: RSP.h
headers/other/: counter.h  logs.h  time.h
source/: CMakeLists.txt
source/OS/src/: os_main.cpp
source/OS/src/base/commands/: main.cpp  other.cpp  settings.cpp
source/OS/src/games/: RSP.cpp  snake.cpp
source/OS/src/other/: counter.cpp  dll_loading.cpp  fake_loading.cpp  logs.cpp  time.cpp  update.cpp
source/src/: os_main.cpp
source/src/base/commands/: main.cpp  other.cpp  settings.cpp
source/src/games/: RSP.cpp
source/src/other/: counter.cpp  logs.cpp  time.cpp  update.cpp
src/: RSP.cpp  commands.cpp  counters.cpp  data.cpp  main.cpp  os_main.cpp  other.cpp  time_utils.cpp
(+30 files in other folders)
